<resources>
    <!-- Preference Keys -->
    <string name="pk_enable_service" translatable="false">ENABLE_SERVICE</string>
    <string name="pk_heads_up_notification" translatable="false">HEADS_UP_NOTIFICATION</string>
    <string name="pk_chat_quote" translatable="false">CHAT_QUOTE</string>

    <string name="app_name">Copy &amp; Share</string>
    <string name="pref_enable_service">Enable service</string>
    <string name="pref_description_enable_service">Enable Copy and Share service</string>
    <string name="pref_heads_up_notification">Heads-up notification</string>
    <string name="pref_description_heads_up_notification">Enable heads-up notification</string>
    <string name="pref_chat_quote">Chat quote</string>
    <string name="pref_description_chat_quote">Add Quote action to notification for quick quoting</string>
    <string name="notification_title_new_text_copied">New text clipped, click to share</string>
    <string name="notification_title_foreground_service">Copy &amp; Share is running</string>
    <string name="chooser_title">Send clipped text</string>
    <string name="channel_name_normal">Normal</string>
    <string name="channel_name_heads_up">Heads-up</string>
    <string name="channel_name_foreground_service">Foreground service</string>
    <string name="channel_description_normal">Channel for new copied text detected.</string>
    <string name="channel_description_heads_up">Channel for new copied text detected, displayed as heads-up notification.</string>
    <string name="channel_description_foreground_service">Indicating that the foreground service of this application is running.</string>
    <string name="action_open_url">Open URL</string>
    <string name="select_url">Select URL</string>
    <string name="quoted_message">Quoted message</string>
    <string name="quote">Quote</string>
    <string name="quoted_message_has_been_copied_to_clipboard">Quoted message has been copied to clipboard</string>
    <string name="toast_you_have_to_disable_the_sound_manually">You have to disable the sound manually in this app\'s notification settings</string>
    <string name="detect_clipboard_content">Detect clipboard</string>
    <string name="detecting_clipboard_content">Detecting clipboard content</string>
    <string name="ok">OK</string>
    <string name="clipboard_access_restricted">Clipboard access is restricted since Android Q. Click the foreground notification instead to detect clipboard content.</string>
</resources>
